fix location spacing

--- a/style.css
+++ b/style.css
@@ -443,14 +443,14 @@ h1,h2,h3 {
 
 #col1 {
  position:relative;
- width: 50%;
+ min-width: 30%;
  padding: 0;
  float: left;
 }
 
 #col2 {
  position:relative;
- width: 50%;
+ min-width: 30%;
  padding: 0;
  float: right;
 }
@@ -886,13 +886,13 @@ footer {
   }
 
   #col1 {
-   width: 50%;
+   min-width: 50%;
    padding: 0;
    float: left;
   }
 
   #col2 {
-   width: 50%;
+   min-width: 50%;
    padding: 0;
    float: right;
  }
